[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-spl = { version = "0.31.0", features = ["metadata"]} 
anchor-client = "0.31.0"
# bincode = "1.3.3"
defi-market = { version = "0.1.0", path = "../programs/defi-market" }
solana-program-test = "2.2.1"
